--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk9h-WFvosW1LZBe8_chLa2J39AE2-D5Q" async></script>
 
-    <title>COLOR-MATIC</title>
+    <title>LLAMA TRAINING CAMPUS</title>
   </head>
   <body>
-    <!-- <input type="checkbox" id="fold">
-    <label for="fold">Fold</label> -->
-
     <div id="main">
       <!-- This is where our React app will go -->
     </div>
