--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBk9h-WFvosW1LZBe8_chLa2J39AE2-D5Q" async></script>
+    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Didact+Gothic" rel="stylesheet">
 
     <title>LLAMA TRAINING CAMPUS</title>
   </head>
