Changing how container element is accessed in three

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="main">
-      <!-- This is where our React app will go -->
+      <!-- This is where React app goes -->
     </div>
   </body>
 </html>
