Adding class to react container

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <title>LLAMA TRAINING CAMPUS</title>
   </head>
   <body>
-    <div id="main">
+    <div id="main" class="main">
       <!-- This is where React app goes -->
     </div>
   </body>
